[package]
name = "weather-api"
version = "0.1.0"
edition = "2024"

[dependencies]
derive = "1.0.0"
features = "0.10.0"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
surrealdb = "3.0.5"
reqwest = { version = "0.13.2", features = ["json"] }
surrealdb-types = "3.0.5"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = "0.4.40"
